wip(refactor): rebuilding backend